# simple-fastapi

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_main.http
.github/workflows/: docker-image.yml
app/: config.py  dependencies.py  main.py
app/database/: crud.py  database.py  models.py
app/routers/: files.py  schemas.py  users.py
app/secrets/: .envapp
